# langchain-demo

./: README.md  pyproject.toml
.chroma/index/: id_to_uuid_551129aa-715e-4525-be0b-133706aca81e.pkl  id_to_uuid_9b00ff8e-a4c9-4e68-888d-d8eeffdcac21.pkl  index_metadata_551129aa-715e-4525-be0b-133706aca81e.pkl  index_metadata_9b00ff8e-a4c9-4e68-888d-d8eeffdcac21.pkl  uuid_to_id_551129aa-715e-4525-be0b-133706aca81e.pkl  uuid_to_id_9b00ff8e-a4c9-4e68-888d-d8eeffdcac21.pkl
app/llms/: chatglm.py  glm.py  llama.py
app/store/: __init__.py  vector_db.py
data/: info.txt
examples/: agent_demo.py  other_chain.py  router_chain.py  sequential_chain.py  serialization.py  serialization_llm_chain.json  state_of_the_union.txt  transformation_chain.py  vicuna_demo.py
tests/: test_database.py
