[tool.poetry]
name = "langchain-local"
version = "0.1.0"
description = ""
authors = ["jiazifa <2332532718@qq.com>"]
readme = "README.md"
packages = [{include = "langchain_local"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.187"
transformers = "^4.29.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
yapf = "^0.33.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
