[tool.poetry]
name = "langchain-local"
version = "0.1.0"
description = ""
authors = ["jiazifa <2332532718@qq.com>"]
readme = "README.md"
packages = [{include = "langchain_local"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.187"
transformers = "^4.29.2"
sentencepiece = {version = "^0.1.99", optional = true}
torch = {version = "^2.0.1", optional = true}
torchvision = {version = "^0.15.2", optional = true}
torchaudio = {version = "^2.0.2", optional = true}
cpm-kernels = {version = "^1.0.11", optional = true}


[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
yapf = "^0.33.0"
pytest = "^7.3.1"


[tool.poetry.group.extra.dependencies]
sentencepiece = "^0.1.99"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
